# gh_actions_benchmark

./: LICENSE.md  readme.md
.github/workflows/: bench-similarity.yml  bench-simulation.yaml  bench-sparse.yaml
data/: mort.json  mortality.csv  sigma.csv  simulation.json  unzip-all-data-linux.sh  unzip-all-data-windows.bat
src/: bench_utils.jl  report.py
src/ML/julia/: Manifest.toml  Project.toml  main.jl
src/ML/python/: README.md  main.py  requirements.txt
src/common/cpp/include/: matrix_io.hpp  profile.hpp  profile_config.hpp
src/common/cpp/include/collector/: json.hpp
src/munging/julia/: Manifest.toml  Project.toml  README.md  main.jl
src/munging/python/: main.py  requirements.txt
src/similarity/cpp/: CMakeLists.txt  README.md  main.cpp
src/similarity/csharp/: Benchmark.cs  Program.cs  README.md  csharp.csproj
src/similarity/cython/: bench.pyx  cython_setup.py
src/similarity/julia/: Manifest.toml  Project.toml  README.md  bench.jl  main.jl
src/similarity/python/: bench.py  main.py  requirements.txt
src/similarity/rust/: Cargo.toml  README.md
src/similarity/rust/src/: main.rs
src/simulation/cpp/: CMakeLists.txt  README.md  main.cpp  parallelization.hpp
src/simulation/csharp/: Benchmark.cs  LinearAlgebra.cs  MathNet.cs  ParallelArray.cs  ParallelVector.cs  Program.cs  README.md  Span.cs  csharp.csproj  packages.lock.json  simulation.cmd
src/simulation/cython/: README.md  bench.pyx
src/simulation/julia/: Manifest.toml  Project.toml  README.md  bench.jl  distributed.jl  main.jl  utils.jl
src/simulation/python/: README.md  bench.py  main.py  requirements.txt
src/simulation/rust/: Cargo.toml
src/simulation/rust/src/: main.rs
src/sparse-sgd/cpp/: CMakeLists.txt  README.md  main.cpp  matrix_debug.hpp  matrix_ops.hpp
src/sparse-sgd/csharp/: Benchmark.cs  Program.cs  README.md  Sparse.cs  Tests.cs  csharp.csproj  csharp.sln  sparse.cmd
src/sparse-sgd/cython/: bench.pyx  cython_setup.py
src/sparse-sgd/julia/: Manifest.toml  Project.toml  README.md  bench.jl  deterministic.jl
src/sparse-sgd/python/: README.md  bench.py  deterministic.py  requirements.txt
src/sparse-sgd/rust/: Cargo.toml  README.md
src/sparse-sgd/rust/src/: lib.rs  main.rs  tests.rs
