[package]
name = "sparse-sgd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "*"
nalgebra = "0.32.2"
nalgebra-sparse = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json ="1.0"

[[test]]
name = "tests"
path = "src/tests.rs"